--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -129,8 +129,9 @@
         </div>
     </div>
 
-    <!-- Final de Tabla -->
-    <!-- Modal de Editar Abono -->
+    <!--                  Final Tabla                        -->
+    <!--                  Inicio de Modal                        -->
+    <!--                  Modal de Crear Abono                        -->
     <div id="modalCrearAbono" class="modal">
         <div class="modal-content">
             <form>
@@ -187,6 +188,7 @@
             </form>
         </div>
     </div>
-    <!-- Fin Modal -->
+    <!--                  Final de Modal                        -->
+    <!--                  Final de Modales                        -->
 </body>
 </html>
