--- a/ADMFacturar/Views/CXP/Index.cshtml
+++ b/ADMFacturar/Views/CXP/Index.cshtml
@@ -32,11 +32,11 @@
 
     <div class="w-full">
     </div>
-    <!--Incio de form-->
+    <!--                  Inicio Form                        -->
     <form>
         <div class="border-b border-gray-900/10 pb-12">
             <h2 class="text-base font-semibold leading-7 text-white">Información Cuentas Por Pagar</h2>
-            <!--Fechas del form-->
+            <!--                  Inicio Fechas                        -->
             <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
                 <div class="sm:col-span-2 sm:col-start-1">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <!--Fin de Fechas-->
+                <!--                  Final de Fechas                        -->
 
 
                 <div class="sm:col-span-2 sm:col-start-1">
@@ -87,13 +87,12 @@
                     </div>
                 </div>
 
-                <!-- Fin de Datos-->
+                <!--                  Final Datos                        -->
             </div>
         </div>
     </form>
-    <!--Final de From-->
-    <!-- Info de tabla -->
-    <!--                  Tabla                        -->
+    <!--                  Final Form                        -->
+    <!--                  Inicio de Tabla                        -->
 
     <div class="w-full">
         <p class="text-xl pb-3 flex items-center text-white">
@@ -138,8 +137,9 @@
         </div>
     </div>
 
-    <!-- Final de Tabla -->
-    <!-- Modal de Crear Abono -->
+    <!--                  Final Tabla                        -->
+    <!--                  Inicio de Modal                        -->
+    <!--                  Modal de Crear Abono                        -->
     <div id="modalCrearAbono" class="modal">
         <div class="modal-content">
             <form>
@@ -190,12 +190,14 @@
                         <div class="sm:col-span-2">
                         </div>
                         <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                        <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
                     </div>
                 </div>
 
             </form>
         </div>
     </div>
-    <!-- Fin Modal -->
+    <!--                  Final Modal de Crear Abono                        -->
+    <!--                  Final Modales                        -->
 </body>
 </html>
