--- a/ADMFacturar/Views/Shared/PageOptions.cshtml
+++ b/ADMFacturar/Views/Shared/PageOptions.cshtml
@@ -32,7 +32,7 @@ Page Options
     Inventario
 </a>
 
-<a asp-controller="#" asp-action="Index" 
+<a asp-controller="Marketing" asp-action="Index" 
    class="flex items-center text-white py-4 pl-6 nav-item">
     <i class="fa-solid fa-ranking-star mr-3"></i>
     Marketing
