--- a/ADMFacturar/Views/Reportes/Index.cshtml
+++ b/ADMFacturar/Views/Reportes/Index.cshtml
@@ -60,16 +60,87 @@
                 <p class="text-gray-600">₡2000</p>
             </div>
         </div>
+
         <!-- Botones de acceso a reportes -->
         <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte de Ventas</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte Estados de Cuenta</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte Kardex</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte de Inventario</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte de Vendedores</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte Cuentas Por Cobrar</a>
-            <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg md:w-auto">Reporte Cuentas por Pagar</a>
+            <a asp-action="RVentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte de Ventas
+            </a>
+            <a asp-action="REstadosCuentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte Estados de Cuenta
+            </a>
+            <a asp-action="RCardex" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte Kardex
+            </a>
+            <a asp-action="RInventario" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte de Inventario
+            </a>
+            <a asp-action="RVendedores" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte de Vendedores
+            </a>
+            <a asp-action="RCxC" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte Cuentas Por Cobrar
+            </a>
+            <a asp-action="RCxP" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+                Reporte Cuentas por Pagar
+            </a>
         </div>
+
+
+        <!-- Botones de acceso a reportes -->
+@* 
+        <div class="mt-8 flex flex-wrap justify-center gap-4">
+            <div id="button" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RVentas">
+                    <div class="flex mt-2">
+                       <p class="mb-2 font-normal">Reporte de Ventas</p>
+                    </div>
+                </a>
+            </div>
+            <div id="button" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="REstadosCuentas">
+                    <div class="flex mt-1">                   
+                        <p class="mb-1 font-normal">Reporte Estados de Cuenta</p>
+                    </div>
+                </a>
+            </div>
+            <div id="DivCard" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RCardex">
+                    <div class="flex mt-2">                    
+                        <p class="mb-2 font-normal">Reporte Kardex</p>
+                    </div>
+                </a>
+            </div>
+            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RInventario">
+                    <div class="flex mt-2">                     
+                        <p class="mb-2 font-normal">Reporte de Inventario</p>
+                    </div>
+                </a>
+            </div>
+            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RVendedores">
+                    <div class="flex mt-2">                  
+                        <p class="mb-2 font-normal">Reporte de Vendedores</p>
+                    </div>
+                </a>
+            </div>
+            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RCxC">
+                    <div class="flex mt-2">                     
+                        <p class="mb-2 font-normal">Reporte CxC</p>
+                    </div>
+                </a>
+            </div>
+            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
+                <a asp-action="RCxP">
+                    <div class="flex mt-2">                   
+                        <p class="mb-2 font-normal">Reporte CxP</p>
+                    </div>
+                </a>
+            </div>
+        </div> *@
+
     </div>
 
 </body>
