--- a/ADMFacturar/Views/Reportes/RCxC.cshtml
+++ b/ADMFacturar/Views/Reportes/RCxC.cshtml
@@ -3,10 +3,12 @@
 <body>
     <link href="~/css/custom.css" rel="stylesheet" />
 
+    <div class="w-full">
+    </div>
     <!--                  Incio de form                        -->
     <form>
         <div class="border-b border-gray-900/10 pb-12">
-            <h2 class="text-base font-semibold leading-7 text-white">Información Cuentas Por Cobrar</h2>
+            <h2 class="text-base font-semibold leading-7 text-white">Filtros de Búsqueda</h2>
             <!--                  Fechas del Form                        -->
             <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
@@ -72,19 +74,27 @@
     <!--                  Inico Tabla                        -->
 
     <div class="w-full">
+        <div class="flex justify-between items-center px-6 py-4 border-b">
         <p class="text-xl pb-3 flex items-center text-white">
             <i class="fas fa-list mr-3"></i> Listado de Cuentas Por Cobrar
         </p>
+        <div>
+            <button class="bg-green-500 text-white px-4 py-2 mr-4 rounded hover:bg-green-600">Exportar a Excel</button>
+            <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Exportar a PDF</button>
+        </div>
+        </div>
         <div class="bg-white overflow-auto">
             <table class="min-w-full bg-white border border-gray-300">
                 <thead class="bg-gray-900 text-white">
                     <tr>
                         <th class="text-center py-3">Factura</th>
                         <th class="text-center py-3">Cliente</th>
+                        <th class="text-center py-3">Vendedor</th>
+                        <th class="text-center py-3">Fecha</th>
                         <th class="text-center py-3">Detalle</th>
                         <th class="text-center py-3">Total</th>
                         <th class="text-center py-3">Saldo</th>
-                        <th class="text-center py-3">Acciones</th>
+                    
                     </tr>
                 </thead>
                 <tbody class="text-center">
@@ -93,19 +103,11 @@
                         <td class="p-3 border border-gray-300">
                             <span class=" text-md font-medium px-2.5 py-0.5">American America</span>
                         </td>
+                        <td class="p-3 border border-gray-300">Roberto Perez</td>
+                        <td class="p-3 border border-gray-300">22/04/2024</td>
                         <td class="p-3 border border-gray-300">Se debe cancelar el 22/07/2024</td>
                         <td class="p-3 border border-gray-300">₡300.000</td>
-                        <td class="p-3 border border-gray-300">₡100.000</td>
-                        <td class="p-3 border border-gray-300">
-                            <button class="btn btnCrear" title="Crear Abono" onclick="abrirModal('modalCrearAbono')">
-                                <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
-                            </button>
-                            <button class="btn VerDetalles" title="Detalles">
-                                <a asp-action="Detalles">
-                                    <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
-                                </a>
-                            </button>
-                        </td>
+                        <td class="p-3 border border-gray-300">₡100.000</td>                  
                     </tr>
                 </tbody>
             </table>
@@ -113,68 +115,6 @@
     </div>
 
     <!--                  Final Tabla                        -->
-    <!--                  Inicio de Modal                        -->
-    <!--                  Modal de Crear Abono                        -->
-    <div id="modalCrearAbono" class="modal">
-        <div class="modal-content">
-            <form>
-                <div class="border-b border-gray-900/10 pb-12">
-                    <h2 class="text-base font-semibold leading-7 text-white">Gestión de Abonos</h2>
-                    <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-
-                        <div class="sm:col-span-2 sm:col-start-1">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Tipo de Documento</label>
-                            <div class="mt-2">
-                                <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                                    <option>Transferencia</option>
-                                    <option>Efectivo</option>
-                                    <option>Cheque</option>
-                                    <option>Sinpe</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Recibo</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Monto</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Banco</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-
-
-                        <div class="sm:col-span-2">
-                            <label for="region" class="block text-sm font-medium leading-6 text-white">Número de Deposito</label>
-                            <div class="mt-2">
-                                <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                            </div>
-                        </div>
-                        <div class="sm:col-span-2">
-                        </div>
-                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                        <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-    </div>
-    <!--                  Final Modal de Crear Abono                        -->
-    <!--                  Final Modales                        -->
-
 
 
 </body>
