--- a/ADMFacturar/wwwroot/css/Custom.css
+++ b/ADMFacturar/wwwroot/css/Custom.css
@@ -312,3 +312,88 @@
         text-decoration: none;
         cursor: pointer;
     }
+
+
+#DivCard {
+    align-content: center;
+    background-color: none;
+    color: white;
+    transition: background-color 0.3s; 
+    margin-right:10px
+}
+
+#DivCard:hover {
+    background-color: #ffffff;
+    color: #1444A8;
+}
+
+/*Apartado de time line*/
+/* Contenedor principal */
+
+.containerReg {
+    width: 100%;
+    margin: 0;
+    color: white
+}
+
+/* Cabecera */
+
+.header {
+    background-color: none;
+    color: #fff;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: left;
+    font-size: 30px;
+    border-bottom: 5px solid #1444A8;
+    border-radius: 10px;
+}
+
+    .header h1 {
+        margin: 0;
+    }
+
+/* Contenido principal */
+
+.main-content {
+    padding: 20px;
+}
+
+/* Línea de tiempo */
+
+.timeline {
+    border-radius: 5px;
+    padding: 10px;
+    background-color: none;
+}
+
+/* Elementos de la línea de tiempo */
+
+.timeline-item {
+    margin-bottom: 30px;
+    position: relative;
+    background-color:none
+}
+
+/* Estilos de la caja de fecha */
+
+.date-box {
+    float: left;
+    margin-right: 15px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #1444A8;
+}
+
+    .date-box .date {
+        color: #fff; /* Color del texto de la fecha */
+        font-weight: bold; /* Texto con negrita */
+    }
+
+.imgContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 50%;
+}
