--- a/ADMFacturar/Views/Administracion/CreateClientes.cshtml
+++ b/ADMFacturar/Views/Administracion/CreateClientes.cshtml
@@ -6,9 +6,9 @@
 <form>
     <p>
         <a asp-action="ListClientes">
-        <svg class ="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" /></svg>
+            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#ffffff" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" /></svg>
         </a>
-   </p>
+    </p>
     <br />
     <br />
 
@@ -59,19 +59,6 @@
                     <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
-            <fieldset>
-                <legend class="block text-sm font-medium leading-6 text-white">Tipo de cliente</legend>
-                <div class="mt-3 flex items-center gap-x-10">
-                    <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
-                        <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                        <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Nacional</label>
-                    </div>
-                    <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
-                        <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                        <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Extranjero</label>
-                    </div>
-                </div>
-            </fieldset>
             <div class="sm:col-span-1">
                 <label for="provider" class="block text-sm font-medium leading-6 text-white">Provincia</label>
                 <div class="mt-2">
@@ -99,12 +86,9 @@
                 </div>
             </div>
             <div class="sm:col-span-1">
-                <label for="provider" class="block text-sm font-medium leading-6 text-white">Condicion de Pago</label>
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras senas </label>
                 <div class="mt-2">
-                    <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        <option value="">Contado</option>
-                        <option value="">Credito</option>
-                    </select>
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
             <fieldset>
@@ -126,8 +110,8 @@
 
         <p>
 
-            <a asp-action="ListClientes" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">Crear Nuevo Cliente</a>
+            <a asp-action="ListClientes" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">Guardar Nuevo Cliente</a>
         </p>
     </div>
-            
+
 </form>
