--- a/ADMFacturar/Views/Administracion/UpdateClientes.cshtml
+++ b/ADMFacturar/Views/Administracion/UpdateClientes.cshtml
@@ -14,7 +14,7 @@
 
 
     <div class="border-b border-gray-900/10 pb-12">
-        <h2 class="text-base font-semibold leading-7 text-white">Actualizar cliente</h2>
+        <h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo cliente</h2>
         <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
             <div class="sm:col-span-1">
@@ -30,7 +30,7 @@
             <div class="sm:col-span-1 ">
                 <label for="city" class="block text-sm font-medium leading-6 text-white">Numero de Identificacion</label>
                 <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="1-1098-0987">
                 </div>
             </div>
 
@@ -59,19 +59,6 @@
                     <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
-            <fieldset>
-                <legend class="block text-sm font-medium leading-6 text-white">Tipo de cliente</legend>
-                <div class="mt-3 flex items-center gap-x-10">
-                    <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
-                        <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                        <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Nacional</label>
-                    </div>
-                    <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
-                        <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                        <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Extranjero</label>
-                    </div>
-                </div>
-            </fieldset>
             <div class="sm:col-span-1">
                 <label for="provider" class="block text-sm font-medium leading-6 text-white">Provincia</label>
                 <div class="mt-2">
@@ -99,12 +86,9 @@
                 </div>
             </div>
             <div class="sm:col-span-1">
-                <label for="provider" class="block text-sm font-medium leading-6 text-white">Condicion de Pago</label>
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras senas </label>
                 <div class="mt-2">
-                    <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        <option value="">Contado</option>
-                        <option value="">Credito</option>
-                    </select>
+                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
             <fieldset>
